deployments/gateway.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gateway
  namespace: elves
spec:
  replicas: 1
  selector:
    matchLabels:
      run: gateway
      app: gateway
  template:
    metadata:
      labels:
        run: gateway
        app: gateway
    spec:
      containers:
        - name: gateway
          image: docker.io/madhavankr/elves-gateway:latest
          imagePullPolicy: Always
          ports:
          - name: gateway
            containerPort: 8080
            protocol: TCP
