deployments/ingestor.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ingestor
  namespace: elves
spec:
  replicas: 1
  selector:
    matchLabels:
      run: ingestor
      app: ingestor
  template:
    metadata:
      labels:
        run: ingestor
        app: ingestor
    spec:
      containers:
        - name: ingestor
          image: docker.io/madhavankr/elves-ingestor:latest
          imagePullPolicy: Always
          ports:
          - name: ingestor
            containerPort: 8080
            protocol: TCP
