deployments/registry-v2.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: registry
  namespace: elves
spec:
  replicas: 1
  selector:
    matchLabels:
      run: registry
      app: registry
  template:
    metadata:
      labels:
        run: registry
        app: registry
    spec:
      containers:
        - name: registry
          image: docker.io/madhavankr/elves-registry:latest
          imagePullPolicy: Always
          ports:
          - name: registry
            containerPort: 8080
            protocol: TCP
