deployments/forecast-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: forecast
  namespace: elves
spec:
  replicas: 3
  selector:
    matchLabels:
      run: forecast
      app: forecast
  template:
    metadata:
      labels:
        run: forecast
        app: forecast
    spec:
      containers:
      - name: forecast
        image: "cloudelves/forecast:TAG"
        imagePullPolicy: Always
        ports:
        - name: forecast
          containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: forecast-service
  namespace: elves
spec:
  type: NodePort
  selector:
    app: forecast
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
      nodePort: 30003
