deployments/forecast-service.yml
apiVersion: v1
kind: Service
metadata:
  name: forecast-service
  namespace: elves
spec:
  type: NodePort
  selector:
    app: forecast
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
      nodePort: 30003
