deployments/gateway-deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gateway
  namespace: elves
spec:
  replicas: 3
  selector:
    matchLabels:
      run: gateway
      app: gateway
  template:
    metadata:
      labels:
        run: gateway
        app: gateway
    spec:
      containers:
        - name: gateway
          image: "cloudelves/gateway:TAG"
          imagePullPolicy: Always
          ports:
          - name: gateway
            containerPort: 8080
            protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: elves
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30005
