deployments/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: elves
spec:
  type: NodePort
  selector:
    app: registry
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30005
