deployments/ingestor-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ingestor
  namespace: elves
spec:
  replicas: 3
  selector:
    matchLabels:
      run: ingestor
      app: ingestor
  template:
    metadata:
      labels:
        run: ingestor
        app: ingestor
    spec:
      containers:
        - name: ingestor
          image: "cloudelves/ingestor:TAG"
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /data
            name: ingestor-volume
          ports:
          - name: ingestor
            containerPort: 8083
            protocol: TCP
      volumes:
      - name: ingestor-volume
        hostPath:
          # directory location on host
          path: /

---

apiVersion: v1
kind: Service
metadata:
  name: ingestor-service
  namespace: elves
spec:
  selector:
    app: ingestor
  type: NodePort
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
      nodePort: 30002
