deployments/ingestor-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingestor-service
  namespace: elves
spec:
  selector:
    app: ingestor
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30002
