deployments/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec: 
      containers: 
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
        - containerPort: 15672
        # 15672:15672 -p 5672:5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
    - name: rmq
      protocol: TCP
      port: 5672
      targetPort: 5672
      nodePort: 30006
    - name: rmq-management
      protocol: TCP
      port: 15672
      targetPort: 15672
      nodePort: 30007

# apiVersion: v1
# kind: Service
# metadata:
#   name: rabbitmq-service
# spec:
#   selector:
#     app: rabbitmq
#   type: NodePort
#   ports:
#    - protocol: TCP
#      port: 5672
#      targetPort: 5672
#      nodePort: 30006
#    - protocol: TCP
#      port: 15672
#      targetPort: 15672
#      nodePort: 30007
