deployments/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: elves
spec:
  type: NodePort
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: 30011
