deployments/ui-service-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: elves
spec:
  type: NodePort
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 30010
